Final Appearance Fixes -- Fixed modal footers in schedule and admin -- Added message to shift trade modal -- Fixed approve schedule button -- Deleted uneccesary files -- Added icons where necessary

--- a/website/static/schedule.css
+++ b/website/static/schedule.css
@@ -176,3 +176,7 @@ body h5 {
 .bg-brown:hover {
     background-color: #593E2C;
 }
+
+.bg-green {
+    background-color: #008000;
+}
